--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Beauty Services</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1><a href="./public">Preview</a></h1>
   </body>
 </html>
